--- a/charts/e2mgr/values.yaml
+++ b/charts/e2mgr/values.yaml
@@ -12,11 +12,11 @@ service:
 
 env:
   CONTAINER_NAME: "ric_e2mgr"
-  HOST_NAME: "ric_e2mgr_host"
+  HOST_NAME: "e2mgr-service"
   POD_NAME: "e2mgr_pod"
   SERVICE_NAME: "ric_e2mgr_service"
   RMR_SEED_RT: "/opt/E2Manager/router.txt"
-  RMR_SRC_ID: "10.0.2.11"
+  RMR_SRC_ID: "e2mgr-service"
   DBAAS_SERVICE_HOST: dbaas-service
 
 volumeMounts:
