--- a/charts/rtmgr/templates/config.yaml
+++ b/charts/rtmgr/templates/config.yaml
@@ -47,6 +47,8 @@ data:
          "maxSize": 1024
          "numWorkers": 1
          "threadType": 1
+       "subscription":
+         "host": "submgr-service:8080"
        "messagetypes": [
           "RIC_HEALTH_CHECK_REQ=100",
           "RIC_HEALTH_CHECK_RESP=101",
