--- a/charts/rtmgr/templates/config.yaml
+++ b/charts/rtmgr/templates/config.yaml
@@ -1,31 +1,87 @@
+#
+#==================================================================================
+#   Copyright (c) 2019 AT&T Intellectual Property.
+#   Copyright (c) 2019 Nokia
+#
+#   Licensed under the Apache License, Version 2.0 (the "License");
+#   you may not use this file except in compliance with the License.
+#   You may obtain a copy of the License at
+#
+#       http://www.apache.org/licenses/LICENSE-2.0
+#
+#   Unless required by applicable law or agreed to in writing, software
+#   distributed under the License is distributed on an "AS IS" BASIS,
+#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+#   See the License for the specific language governing permissions and
+#   limitations under the License.
+#
+#  
+#   This source code is part of the near-RT RIC (RAN Intelligent Controller)
+#   platform project (RICP).
+#
+#==================================================================================
+#
+#
+#   Abstract:           Configuration values for the routing manager
+#   Date:               29 May 2019
+#
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: rtmgrcfg
 data:
-  # FQDN and port info of the platform components for routing manager to form
-  # and distribute corresponding routes to them
+  # FQDN and port info of the platform components for routing manager to form and distribute corresponding routes to them
   rtmgr-config.yaml: |
+    {
+      "PlatformComponents":
+      [
         {
-        "apiVersion": "v1",
-        "data": {
-          "rtmgrcfg": "{\n  \"PlatformComponents\":\n  [\n    {\n      \"name\": \"E2TERM\",\n      \"fqdn\": \"e2term\",\n      \"port\": 4561\n    },\n    {\n      \"name\": \"SUBMAN\",\n      \"fqdn\": \"subman\",\n      \"port\": 4561\n    },\n    {\n      \"name\": \"E2MAN\",\n      \"fqdn\": \"e2man\",\n      \"port\": 4561\n    },\n    {\n      \"name\": \"UEMAN\",\n      \"fqdn\": \"ueman\",\n      \"port\": 4561\n    }\n  ]\n \"local\":\n  \"host\": \":8080\"\n \"logger\":\n  \"level\": 3\n \"rmr\":\n  \"protPort\": \"tcp:4560\"\n  \"maxSize\": 2072\n  \"numWorkers\": 1\n  \"RTFILE\":\n     \"/db/rt.json\"\n  \"NBIURL\":\n          \"http://localhost:3800\"\n\n}\n"
+          "name": "E2TERM",
+          "fqdn": "e2term",
+          "port": 4561
         },
-        "kind": "ConfigMap",
-        "metadata": {
-          "name": "rtmgrcfg"
+        {
+          "name": "SUBMAN",
+          "fqdn": "subman",
+          "port": 4561
         },
-        "rtfile": "/db/rt.json",
-        "sdl" : "file",
-        "sbi": "rmrpush",
-        "rpe": "rmrpush",
-        "nbi": "httpRESTful",
-        "xmurl": "http://127.0.0.1:4560/ric/v1/xapps",
-        "e2murl": "http://127.0.0.1:3800/v1/e2t/list",
-        "nbiurl": "http://127.0.0.1:3800",
-        "subscription": {
-          "host": "127.0.0.1:8089"
+        {
+          "name": "E2MAN",
+          "fqdn": "e2man",
+          "port": 4561
         },
-        "PlatformRoutes": [ {"messagetype" : "RIC_SUB_REQ", "senderendpoint": "SUBMAN", "subscriptionid": -1, "endpoint": "", "meid": "%meid"} ]
-      
+        {
+          "name": "UEMAN",
+          "fqdn": "ueman",
+          "port": 4561
         }
+      ]
+     "local":
+      "host": ":8080"
+     "logger":
+      "level": 3
+     "rmr":
+      "protPort": "tcp:4560"
+      "maxSize": 2072
+      "numWorkers": 1
+      "RTFILE":
+         "/db/rt.json"
+      "NBIURL":
+              "http://localhost:3800"
+   
+    }
+subscription:
+ host: "127.0.0.1:8089"
+
+ #xmurl: "http://service-ricplt-appmgr-http:8080/ric/v1/xapps"
+ #e2murl: "http://service-ricplt-e2mgr-http:3800/v1/e2t/list"
+ rtfile: "/db/rt.json"
+ #CFGFILE: "/cfg/rtmgr-config.yaml"
+ #rpe: "rmrpush"
+ #s#bi: "rmrpush"
+ #s#biurl: "0.0.0.0"
+ #nbi: "httpRESTful"
+ #nbiurl: "http://service-ricplt-rtmgr-http:3800"
+ ##sdl: "file"
+ #local: 
+ #host: ":8080"
