--- a/charts/rtmgr/templates/config.yaml
+++ b/charts/rtmgr/templates/config.yaml
@@ -32,56 +32,37 @@ metadata:
 data:
   # FQDN and port info of the platform components for routing manager to form and distribute corresponding routes to them
   rtmgr-config.yaml: |
-    {
-      "PlatformComponents":
-      [
-        {
-          "name": "E2TERM",
-          "fqdn": "e2term",
-          "port": 4561
-        },
-        {
-          "name": "SUBMAN",
-          "fqdn": "subman",
-          "port": 4561
-        },
-        {
-          "name": "E2MAN",
-          "fqdn": "e2man",
-          "port": 4561
-        },
-        {
-          "name": "UEMAN",
-          "fqdn": "ueman",
-          "port": 4561
-        }
-      ]
-     "local":
-      "host": ":8080"
-     "logger":
-      "level": 3
-     "rmr":
+    "local":
+      "host": ":8086"
+    "logger":
+      "level": 4
+    "rmr":
       "protPort": "tcp:4560"
       "maxSize": 2072
-      "numWorkers": 1
-      "RTFILE":
-         "/db/rt.json"
-      "NBIURL":
-              "http://localhost:3800"
-   
-    }
-subscription:
- host: "127.0.0.1:8089"
-
- #xmurl: "http://service-ricplt-appmgr-http:8080/ric/v1/xapps"
- #e2murl: "http://service-ricplt-e2mgr-http:3800/v1/e2t/list"
- rtfile: "/db/rt.json"
- #CFGFILE: "/cfg/rtmgr-config.yaml"
- #rpe: "rmrpush"
- #s#bi: "rmrpush"
- #s#biurl: "0.0.0.0"
- #nbi: "httpRESTful"
- #nbiurl: "http://service-ricplt-rtmgr-http:3800"
- ##sdl: "file"
- #local: 
- #host: ":8080"
+      "maxRetryOnFailure": 5
+      "threadType": 0
+      "mtypes" :
+        - "name": "TESTNAME1"
+          "id" : 55555
+        - "name": "TESTNAME2"
+          "id" : 55556
+      "lowLatency": False
+      "fastAck": False
+    "subscription":
+        "host": "localhost:8088"
+        "timeout": 2
+        "retryCount": 10
+        "retryDelay": 5
+    "db":
+      "namespace": "sdl"
+      "waitForSdl": false
+    "test":
+      "mode": "forwarder"
+      "mtype": 10004
+      "subId": 1111
+      "size": 100
+      "rate": 10
+      "amount": 10
+      "rounds": 1
+      "store": 0
+      "waitForAck": 0
