--- a/charts/appmgr/values.yaml
+++ b/charts/appmgr/values.yaml
@@ -10,8 +10,9 @@ env:
   HOST_NAME: "appmgr-service"
   POD_NAME: "appmgr_pod"
   SERVICE_NAME: "ric_appmgr_service"
-  RMR_SEED_RT: "/opt/ric/config/router.txt"
+  #RMR_SEED_RT: "/opt/ric/config/router.txt"
   RMR_SRC_ID: "appmgr-service"
+  RMR_RTG_SVC: 4561
   DBAAS_SERVICE_HOST: dbaas-service
 
 service:
