--- a/charts/appmgr/values.yaml
+++ b/charts/appmgr/values.yaml
@@ -21,9 +21,9 @@ service:
   rmrDataPort: 4561
 
 volumeMounts:
-  - name: routes-rtg
-    mountPath: /opt/ric/config/router.txt
-    subPath: routes.rtg
+  # - name: routes-rtg
+  #   mountPath: /opt/ric/config/router.txt
+  #   subPath: routes.rtg
   - name: appmgr-config
     mountPath: /opt/ric/config/appmgr.yaml
     subPath: appmgr.yaml
