--- a/charts/python_xapp_runner/templates/deployment.yaml
+++ b/charts/python_xapp_runner/templates/deployment.yaml
@@ -22,7 +22,8 @@ spec:
             - containerPort: {{ .Values.service.port }}
           command: [ "/bin/sh", "-c" ]
           args:
-            - exec python3 -u /opt/xApps/xapp.py
+            - sleep 10000;
+            # - exec python3 -u /opt/xApps/xapp.py
           env:
             {{- range $key, $value := .Values.env }}
             - name: {{ $key }}
