--- a/charts/python_xapp_runner/templates/deployment.yaml
+++ b/charts/python_xapp_runner/templates/deployment.yaml
@@ -23,7 +23,7 @@ spec:
           command: [ "/bin/sh", "-c" ]
           args:
             - mkdir /tmp/xApp;
-              mv /opt/xApps/* /tmp/xApp;
+              cp -R /opt/xApps/* /tmp/xApp;
               exec python3 -u /tmp/xApp/xapp.py;
               sleep 1000;
           env:
