--- a/charts/submgr/templates/submgr-config.yaml
+++ b/charts/submgr/templates/submgr-config.yaml
@@ -5,7 +5,7 @@ metadata:
 data:
   submgr-config.yaml: |
     "local":
-      "host": ":8088"
+      "host": "submgr-service:8088"
     "logger":
       "level": 3
     "rmr":
@@ -14,7 +14,7 @@ data:
       "numWorkers": 1
     "rtmgr":
       "hostAddr": "rtmgr-service"
-      "port"    : "8989"
+      "port"    : "3800"
       "baseUrl" : "/ric/v1"
     "db":
       "sessionNamespace": "XMSession"
