--- a/charts/e2mgr/values.yaml
+++ b/charts/e2mgr/values.yaml
@@ -11,27 +11,20 @@ service:
 
 
 env:
-  CONTAINER_NAME: "ric_e2mgr"
+  CONTAINER_NAME: "e2mgr"
   HOST_NAME: "e2mgr-service"
   POD_NAME: "e2mgr_pod"
-  SERVICE_NAME: "ric_e2mgr_service"
-  #RMR_SEED_RT: "/opt/E2Manager/router.txt"
+  SERVICE_NAME: "e2mgr-service"
   RMR_SRC_ID: "e2mgr-service"
   RMR_RTG_SVC: 4561
   DBAAS_SERVICE_HOST: dbaas-service
 
 volumeMounts:
-  # - name: e2mgr-rtg
-  #   mountPath: /opt/E2Manager/router.txt
-  #   subPath: routes.rtg
   - name: e2mgr-config
     mountPath: /opt/E2Manager/resources/configuration.yaml
     subPath: e2mgr.yaml
 
 volumes:
-  # - name: e2mgr-rtg
-  #   configMap:
-  #     name: e2mgr-rtg
   - name: e2mgr-config
     configMap:
       name: e2mgr-config
