--- a/charts/e2mgr/templates/service.yaml
+++ b/charts/e2mgr/templates/service.yaml
@@ -8,9 +8,17 @@ spec:
   type: ClusterIP
   clusterIP: None
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.port }}
+    - port: 3800
+      targetPort: 3800
       protocol: TCP
-      name: e2mgr
+      name: e2mgr1
+    - port: 3801
+      targetPort: 3801
+      protocol: TCP
+      name: e2mgr2
+    - port: 4561
+      targetPort: 4561
+      protocol: TCP
+      name: e2mgr3  
   selector:
     app: e2mgr
