--- a/charts/e2term/templates/service.yaml
+++ b/charts/e2term/templates/service.yaml
@@ -8,9 +8,21 @@ spec:
   type: ClusterIP
   clusterIP: None
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.port }}
+    - port: 36421
+      targetPort: 36421
       protocol: SCTP
       name: e2term
+    - port: 38000
+      targetPort: 38000
+      protocol: TCP
+      name: e2term
+    - port: 4561
+      targetPort: 4561
+      protocol: TCP
+      name: e2term
+    - port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.port }}
+      protocol: TCP
+      name: e2term            
   selector:
     app: e2term
