--- a/charts/python_xapp_runner/values.yaml
+++ b/charts/python_xapp_runner/values.yaml
@@ -12,7 +12,7 @@ service:
 env:
   PYTHONUNBUFFERED: "0"
   PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION: "python"
-  #RMR_SEED_RT: "/opt/ric/config/uta-rtg.rt"
+  RMR_SEED_RT: "/opt/ric/config/uta-rtg.rt"
   RMR_SRC_ID: "xapp-service"
   RMR_RTG_SVC: "4561" # leave empty, so RMR works correctly with RT Manager Simulator
 
