--- a/charts/python_xapp_runner/templates/deployment.yaml
+++ b/charts/python_xapp_runner/templates/deployment.yaml
@@ -25,7 +25,7 @@ spec:
             - mkdir /tmp/xApp;
               cp -RL /opt/xApps/files/* /tmp/xApp/;
               cp -RL /opt/xApps/lib /tmp/xApp/;
-              sleep 1000;
+              exec python3 -u /tmp/xApp/xapp.py;
           env:
             {{- range $key, $value := .Values.env }}
             - name: {{ $key }}
