--- a/charts/appmgr/values.yaml
+++ b/charts/appmgr/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  repository: nexus3.o-ran-sc.org:10002/o-ran-sc/ric-plt-appmgr
+  repository: 10.22.17.152:5000/oran-ric/ric-plt-appmgr
   pullPolicy: IfNotPresent
   tag: "0.5.7" # Or use .Values.global.tag
 
