--- a/charts/e2mgr/values.yaml
+++ b/charts/e2mgr/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  repository: nexus3.o-ran-sc.org:10002/o-ran-sc/ric-plt-e2mgr
+  repository: 10.22.17.152:5000/oran-ric/ric-plt-e2mgr
   pullPolicy: IfNotPresent
   tag: "6.0.4" # Or use .Values.global.tag
 
