--- a/charts/e2term/templates/deployment.yaml
+++ b/charts/e2term/templates/deployment.yaml
@@ -29,6 +29,7 @@ spec:
             - LOCAL_IP=$(hostname -I);
               sed -e s/@LOCAL_IP@/$LOCAL_IP/g
                   /tmp/config.conf | tee /opt/e2/config/config.conf;
+              cat config.conf;
               ./e2 -p config -f config.conf;
           env:
             {{- range $key, $value := .Values.env }}
