--- a/charts/e2term/templates/deployment.yaml
+++ b/charts/e2term/templates/deployment.yaml
@@ -26,7 +26,7 @@ spec:
             - containerPort: {{ .Values.service.port }}
           command: ["/bin/sh", "-c"]
           args:
-            - export LOCAL_IP=$(hostname -I) && \
+            - export LOCAL_IP=$(hostname -I);
               sed "s|@LOCAL_IP@|$LOCAL_IP|g" /tmp/config.conf > /opt/e2/config/config.conf;
               ./e2 -p config -f config.conf;
           env:
