--- a/charts/python_xapp_runner/templates/service.yaml
+++ b/charts/python_xapp_runner/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-python-xapp-runner-service
+  name: xapp-service
   labels:
     app: python_xapp_runner
 spec:
