--- a/charts/rtmgr/templates/config.yaml
+++ b/charts/rtmgr/templates/config.yaml
@@ -4,6 +4,9 @@ metadata:
   name: rtmgrcfg
 data:
   rtmgr-config.yaml: |
+       "controls":
+         "subscription":
+           "host": "submgr-service:8080" 
        "PlatformComponents":
          -
            "name": "SUBMAN"
