--- a/charts/python_xapp_runner/values.yaml
+++ b/charts/python_xapp_runner/values.yaml
@@ -22,6 +22,8 @@ volumeMounts:
     subPath: routes.rtg
   - name: script-volume
     mountPath: /opt/xApps/files/
+  - name: lib-volume
+    mountPath: /opt/xApps/lib
 
 volumes:
   - name: xapp-rtg
@@ -30,5 +32,8 @@ volumes:
   - name: script-volume
     configMap:
       name: xapp-script
+  - name: lib-volume
+    configMap:
+      name: xapp-lib
 
 resources: {}
