--- a/charts/python_xapp_runner/templates/configmap-lib.yaml
+++ b/charts/python_xapp_runner/templates/configmap-lib.yaml
@@ -1,10 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: xapp-lib
+  name: {{ .Release.Name }}-lib-configmap
 data:
-  # Loop through files in the lib/ directory and add them to the ConfigMap
-  {{- range $file := .Files.Glob "lib/*" }}
-  {{ $file.Name }}: |
-    {{ .Files.Get $file.Name | indent 4 }}
+  {{- range $path, $content := .Files.Glob "lib/*" }}
+  {{ $path | base }}: |
+    {{ $content | indent 4 }}
   {{- end }}
