--- a/charts/python_xapp_runner/templates/service.yaml
+++ b/charts/python_xapp_runner/templates/service.yaml
@@ -12,6 +12,10 @@ spec:
       targetPort: 4560
       protocol: TCP
       name: rmr
+    - port: 4561
+      targetPort: 4561
+      protocol: TCP
+      name: rmr1
     - port: 8090
       targetPort: 8090
       protocol: TCP
