--- a/charts/python_xapp_runner/templates/deployment.yaml
+++ b/charts/python_xapp_runner/templates/deployment.yaml
@@ -37,10 +37,7 @@ spec:
             - containerPort: {{ .Values.service.port }}
           command: [ "/bin/sh", "-c" ]
           args:
-            - mkdir /tmp/xApp;
-              cp -RL /opt/xApps/files/* /tmp/xApp/;
-              cp -RL /opt/xApps/lib /tmp/xApp/;
-              exec python3 -u /tmp/xApp/xapp.py;
+            - exec python3 -u /tmp/xApp/start-metrics.sh;
           env:
             {{- range $key, $value := .Values.env }}
             - name: {{ $key }}
