--- a/charts/python_xapp_runner/templates/deployment.yaml
+++ b/charts/python_xapp_runner/templates/deployment.yaml
@@ -40,6 +40,7 @@ spec:
             - mkdir /tmp/xApp;
               cp -RL /opt/xApps/files/* /tmp/xApp/;
               cp -RL /opt/xApps/lib /tmp/xApp/;
+              chmod +x /tmp/xApp/start-metrics.sh;
               exec /tmp/xApp/start-metrics.sh;
           env:
             {{- range $key, $value := .Values.env }}
