--- a/charts/python_xapp_runner/templates/deployment.yaml
+++ b/charts/python_xapp_runner/templates/deployment.yaml
@@ -54,9 +54,25 @@ spec:
             {{- end }}
           volumeMounts:
             {{- toYaml .Values.volumeMounts | nindent 12 }}
+            {{- if or .Values.start.turbostat .Values.start.perf }}
+            - mountPath: /proc
+              name: proc
+            - name: sys
+              mountPath: /sys  # Mount /sys from the host              
+            {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           stdin: true
           tty: true
       volumes:
         {{- toYaml .Values.volumes | nindent 8 }}
+        {{- if or .Values.start.turbostat .Values.start.perf }}
+        - name: proc
+          hostPath:
+            path: /proc
+            type: Directory
+        - name: sys
+          hostPath:
+            path: /sys
+            type: Directory
+        {{- end }}
